Fix z-index on navbar

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -23,6 +23,7 @@ body {
 	left:              0;
 	right:             0;
 	position:          fixed;
+	z-index:           1000;
 
 	h2 {
 		color: white;
